fix footer left alignment to be equal to layout

--- a/app/frontend/less/footer.less
+++ b/app/frontend/less/footer.less
@@ -3,7 +3,8 @@ footer {
   background-color: #262626;
 
   #footnav{
-    padding: 2em 0;
+    padding-top: 2em;
+    padding-bottom: 2em;
     color: #888;
 
     ul{
@@ -20,7 +21,8 @@ footer {
   }
 
   #copyright {
-    padding: 2em 0;
+    padding-top: 2em;
+    padding-bottom: 2em;
     color: #666;
     background-color: #1a1a1a;
 
